setup the cors config